static/css/prs.css
/*  HTML5 ✰ Boilerplate  */
* {
    margin: 0;
    padding: 0;
    font-family: "Trebuchet MS", Trebuchet, Verdana, Arial;
    z-index: 5;
}

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre,
code, dfn, em, img, kbd, q, samp,
small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, thead, tr, th, td,
canvas, footer, header, hgroup, menu, section, summary, time, audio, video {
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}

#site-title {  
    text-align: center;
    padding-right: 0.5em;
    font-size: 30px;
    color: #666666;
}

#site-title:hover {
    color: blue;
    cursor: pointer;
}

a {
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
}

input, select {
  vertical-align: middle;
}

body {
    height: 100%;
    font: 13px/1.231 sans-serif;
    display: inline-block;
}

select, input, textarea, button {
  font: 99% sans-serif;
}

pre, code, kbd, samp, .mono {
    font-family: monospace, courier;
}

body, select, input, textarea {
  color: #444;
}

.search {
  float: left;
  padding-left: 0px;
  position: relative;
  margin-top: 0.5em;
}

.search input {
  padding: 5px 5px;
  font-size: 14px;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  -o-border-radius: 0;
  -ms-border-radius: 0;
  -khtml-border-radius: 0;
  border-radius: 0;
  border: none;
}

.search input[type="text"], .search select {
  border: 1px solid #b7b7b7;
  
  background: white url('/static/img/search.png?1299763894') 4px center no-repeat;
  padding-left: 20px;
  padding-right: 40px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -o-border-radius: 3px;
  -ms-border-radius: 3px;
  -khtml-border-radius: 3px;
  border-radius: 3px;
  width: 12em;
  height: 25px;
}

.search select {
    font-size: 14px;
    background: white;
    width: 16.5em;
    height: 35px;
    color: #666;
}

.search input[type="submit"] {
  border: 1px solid #b7b7b7;
  border-left: 0;
  
  -moz-border-radius-topright: 3px;
  -webkit-border-top-right-radius: 3px;
  -o-border-top-right-radius: 3px;
  -ms-border-top-right-radius: 3px;
  -khtml-border-top-right-radius: 3px;
  border-top-right-radius: 3px;
  -moz-border-radius-bottomright: 3px;
  -webkit-border-bottom-right-radius: 3px;
  -o-border-bottom-right-radius: 3px;
  -ms-border-bottom-right-radius: 3px;
  -khtml-border-bottom-right-radius: 3px;
  border-bottom-right-radius: 3px;
  padding: 0 12px;
  background: #e6e6e6;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e6e6e6), color-stop(100%, #d6d6d6));
  background-image: -webkit-linear-gradient(#e6e6e6, #d6d6d6);
  background-image: -moz-linear-gradient(#e6e6e6, #d6d6d6);
  background-image: -o-linear-gradient(#e6e6e6, #d6d6d6);
  background-image: -ms-linear-gradient(#e6e6e6, #d6d6d6);
  background-image: linear-gradient(#e6e6e6, #d6d6d6);
  font-weight: bold;
  color: #666;
  width: 40px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
}

.search input[type="submit"]:hover {
  background: #d6d6d6;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #d6d6d6), color-stop(100%, #c6c6c6));
  background-image: -webkit-linear-gradient(#d6d6d6, #c6c6c6);
  background-image: -moz-linear-gradient(#d6d6d6, #c6c6c6);
  background-image: -o-linear-gradient(#d6d6d6, #c6c6c6);
  background-image: -ms-linear-gradient(#d6d6d6, #c6c6c6);
  background-image: linear-gradient(#d6d6d6, #c6c6c6);
}

h1 {
  font-size: 175%;
  color: #df5e0e;
  display: inline;
}

h2 {
  font-size: 150%;
/*  color: #816894; */
  color: #888888;
  margin: 1em 0 0;
  margin-top: 0;
}

html {
  overflow-y: scroll;
  height: 100%;
}

a:hover, a:active {
  outline: none;
}

a, a:active, a:visited {
  color: #607890;
}

a:hover {
  color: #036;
}

ul, ol {
  margin-left: 1.8em;
}

ol {
  list-style-type: decimal;
}

small {
  font-size: 85%;
}

strong {
  font-weight: bold;
}

td, td img {
  vertical-align: top;
}

sub {
  vertical-align: sub;
  font-size: smaller;
}

sup {
  vertical-align: super;
  font-size: smaller;
}

pre {
  padding: 15px;
  word-wrap: break-word;
}

pre.log {
    padding: 0px;
    font-size: 80%;
}

.log {
    max-width: 830px;
}

textarea {
  overflow: auto;
}

.ie6 legend, .ie7 legend {
  margin-left: -7px;
}

input[type="radio"] {
  vertical-align: baseline;
}

input[type="checkbox"] {
  vertical-align: baseline;
}

.ie7 input[type="checkbox"] {
  vertical-align: baseline;
}

.ie6 input {
  vertical-align: text-bottom;
}

input[type=button], input[type=submit], button {
  cursor: pointer;
}

input:invalid, textarea:invalid {
  border-radius: 1px;
  -moz-box-shadow: 0px 0px 5px red;
  -webkit-box-shadow: 0px 0px 5px red;
  box-shadow: 0px 0px 5px red;
}

.no-boxshadow input:invalid,
.no-boxshadow textarea:invalid {
  background-color: #f0dddd;
}

::-moz-selection {
  background: #FF5E99;
  color: #fff;
  text-shadow: none;
}

::selection {
  background: #FF5E99;
  color: #fff;
  text-shadow: none;
}

a:link {
  -webkit-tap-highlight-color: #FF5E99;
}

button {
  width: auto;
  overflow: visible;
}

.ie7 img {
  -ms-interpolation-mode: bicubic;
}

.ir {
  display: block;
  text-indent: -999em;
  overflow: hidden;
  background-repeat: no-repeat;
  text-align: left;
  direction: ltr;
}

.hidden {
  display: none;
  visibility: hidden;
}

.visuallyhidden {
  position: absolute !important;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}

.invisible {
  visibility: hidden;
}

/* Background textures by Rüdiger Appel from http://www.3quarks.com/en/BackgroundPattern/ */
body {
  background: url('/static/img/canvas.jpg?881083570');
}
/* ... */

